@startuml classes
' set namespaceSeparator none

' package chilly_bird.objects #DDDDDD {}
skinparam PackageBackgroundColor #DDDDDD

class "pg.sprite.Sprite" as pg.sprite.Sprite {
  + layer : int
  + add() -> None
  + add_internal(group: _Group) -> None
  + alive() -> bool
  + groups() -> List[_Group]
  + kill() -> None
  + remove() -> None
  + remove_internal(group: _Group) -> None
  + update() -> None
}
' class "AssetsConf" as chilly_bird.configs.AssetsConf {
  '   + fonts_path : Path
  '   + frames_path : Path
  '   + img_path : Path
  '   + sound_path : Path
  '
' }
class "BaseButton" as chilly_bird.objects.buttons.BaseButton {
  + button_event_name : str
  + image : pg.Surface
  + rect : pg.Rect
  + update() -> None
}
abstract class "BaseState" as chilly_bird.states.base.BaseState {
  + done : bool
  + groups : dict[str, pg.sprite.AbstractGroup]
  + next_state : str | None
  + screen_rect : pg.Rect
  + draw(surface: pg.Surface) -> None
  + handle_event(event: pg.event.Event) -> None
  + {abstract}on_enter(passed_groups: Mapping[str, pg.sprite.AbstractGroup]) -> None
  + on_exit() -> dict[str, pg.sprite.AbstractGroup]
  + update(dt: int) -> None
}
class "Bird" as chilly_bird.objects.bird.Bird {
  + anim_spd : int
  + clicked : bool
  + flying : bool
  + gravity : float
  + i : int
  + image : pg.Surface
  + images : list[pg.Surface]
  + initial_images : list[pg.Surface]
  + initial_pos : tuple
  + jump_sound : pg.mixer.Sound
  + rect : pg.Rect
  + road_y_pos : int
  + scale : tuple[int, int]
  + visible : bool
  + fly() -> None
  + position(pos: tuple[int, int] | None) -> None
  + redress() -> None
  + reset() -> None
  + update() -> None
}
class "Flying" as chilly_bird.states.flying.Flying {
  + cfg : MainConfig | None
  + done : bool
  + game_is_over : bool
  + gap_btw_pipes : int
  + leftmost_pipe : int
  + passed_leftmost_pipe : NoneType
  + pipe_freq : int
  + road_scroll : int
  + score : int
  + scroll_speed : int
  + within_pipe : bool
  + draw(surface: pg.Surface) -> None
  + generate_pipes() -> None
  + handle_collision() -> None
  + inc_score() -> None
  + on_enter(passed_groups: dict[str, AbstractGroup]) -> None
  + on_exit() -> dict[str, AbstractGroup]
  + update(dt: int) -> None
}
' class "FontsConf" as chilly_bird.configs.FontsConf {
  '   + color : tuple[int, int, int]
  '   + score_font : Path
  '   + score_font_size : int
  '   + text_font : Path
  '   + text_font_size : int
  '
' }
class "Game" as chilly_bird.game.Game {
  + background : pg.Surface
  + clock : pg.time.Clock
  + current_state : BaseState
  + fps : int
  + road_img : pg.Surface
  + running : bool
  + screen : pg.Surface
  + states : Mapping[str, BaseState]
  + draw() -> None
  + flip_state() -> None
  + handle_events() -> None
  + run() -> None
  + update_state(dt: int) -> None
}
class "GameFactory" as chilly_bird.game_factory.GameFactory {
  + cfg : MainConfig
  + game : Game
  + main_scene : MainScene
  + screen : pg.Surface
}
class "GameOver" as chilly_bird.states.game_over.GameOver {
  + done : bool
  + handle_event(event: Event) -> None
  + on_enter(passed_groups: Mapping[str, AbstractGroup]) -> None
  + on_exit() -> dict[str, AbstractGroup]
}
class "Girl" as chilly_bird.objects.girls.Girl {
  + image : pg.Surface
  + rect : pg.Rect
}
class "MainConfig" as chilly_bird.configs.MainConfig {
  + assets : AssetsConf
  + fonts : WindowConf
  + main_scene : FontsConf
  + window : MainSceneAssetsConf
}
class "MainScene" as chilly_bird.game_factory.MainScene {
  + start_screen : StartScreen
  + flying : Flying
  + game_over : GameOver
}
' class "MainSceneAssetsConf" as chilly_bird.configs.MainSceneAssetsConf {
  '   + bg_img : Path
  '   + bg_music : Path
  '   + bird_aframes : tuple[Path, Path, Path]
  '   + bird_jump_sound : Path
  '   + bird_size : tuple[int, int]
  '   + disappointed_girl_img : Path
  '   + pipe_img : Path
  '   + redress_button_img : Path
  '   + reskin_button_img : Path
  '   + restart_button_img : Path
  '   + road_texture : Path
  '   + start_button_img : Path
  '
' }
class "Pipe" as chilly_bird.objects.pipes.Pipe {
  + counter : int
  + div : int
  + image : pg.Surface
  + pipe_gap : int
  + rect : pg.Rect
  + scroll_speed : int
  + step : int
  + update() -> None
}
class "Road" as chilly_bird.objects.road.Road {
  + image : pg.Surface
  + initial_scroll : int
  + rect : pg.Rect
  + y_pos : int
}
class "StartScreen" as chilly_bird.states.start_screen.StartScreen {
  + cfg : MainConfig | None
  + done : bool
  + font : pg.font.Font
  + font_color : tuple
  + texts : list
  + handle_event(event: Event) -> None
  + on_enter(passed_groups: Mapping[str, pg.sprite.AbstractGroup]) -> None
  + reskin_bird() -> None
}
class "TextSprite" as chilly_bird.objects.textboxes.TextSprite {
  + color : ColorValue
  + current_text : str
  + font : pg.font.Font
  + image : pg.Surface
  + previous_text : None
  + rect : pg.Rect
  + update() -> None
}

class "GraphEditor" as chilly_bird.graph_editor.GraphEditor {
  + FPS : int
  + circle_color : pg.color.Color
  + curr_color : pg.color.Color
  + min_circle_size : int
  + selected_rect : pg.Rect | None
  + curr_start : chilly_bird.types.Coordinate
  + user_image : pg.Surface | None
  + previous_screen_mode : tuple[int, int]
  + screen : pg.Surface
  + background : pg.Surface
  + create_checkered_background(tile_size: int) -> pg.Surface
  + start_selection(pos: Coordinate) -> None
  + new_selection(pos: Coordinate) -> None
  + draw_circle(color: ColorValue, rect: RectValue, width: int) -> None
  + draw_selection() -> None
  + draw_current(pos: Coordinate) -> None
  + draw_user_image() -> None
  + draw_background() -> None
  + get_image_selected() -> pg.Surface | None
  + run() -> pg.Surface | None
  - __enter__() -> Self
  - __exit__(*exc_details) -> None
}

' class "WindowConf" as chilly_bird.configs.WindowConf {
  '   + caption : str
  '   + fps : int
  '   + icon_path : Path
  '   + screen_height : int
  '   + screen_width : int
  '
' }
chilly_bird.objects.pipes.Pipe -u-|> pg.sprite.Sprite #line:green;line.dotted;
chilly_bird.objects.buttons.BaseButton -u-|> pg.sprite.Sprite #line:green;line.dotted;
chilly_bird.objects.bird.Bird -u-|> pg.sprite.Sprite #line:green;line.dotted;
chilly_bird.objects.girls.Girl -u-|> pg.sprite.Sprite #line:green;line.dotted;
chilly_bird.objects.textboxes.TextSprite -u-|> pg.sprite.Sprite #line:green;line.dotted;
chilly_bird.objects.road.Road -u-|> pg.sprite.Sprite #line:green;line.dotted;

chilly_bird.states.flying.Flying -[#blue]-|> chilly_bird.states.base.BaseState
chilly_bird.states.game_over.GameOver -[#blue]-|> chilly_bird.states.base.BaseState
chilly_bird.states.start_screen.StartScreen -[#blue]-|> chilly_bird.states.base.BaseState

' chilly_bird.configs.AssetsConf --* chilly_bird.configs.MainConfig : assets
' chilly_bird.configs.FontsConf --* chilly_bird.configs.MainConfig : fonts
' chilly_bird.configs.MainSceneAssetsConf --* chilly_bird.configs.MainConfig : main_scene
' chilly_bird.configs.WindowConf --* chilly_bird.configs.MainConfig : window
chilly_bird.configs.MainConfig --* chilly_bird.game_factory.GameFactory : cfg

chilly_bird.game.Game --* chilly_bird.game_factory.GameFactory : game
chilly_bird.game_factory.MainScene --* chilly_bird.game_factory.GameFactory : main_scene

chilly_bird.objects.bird.Bird --* chilly_bird.states.flying.Flying #line:DarkViolet;line.dashed;text:DarkViolet  : groups.bird
chilly_bird.objects.bird.Bird --* chilly_bird.states.start_screen.StartScreen #line:DarkViolet;line.dashed;text:DarkViolet  : groups.bird
chilly_bird.objects.pipes.Pipe --> chilly_bird.states.flying.Flying #line:DarkSlateGrey;line.dashed;text:red
chilly_bird.objects.girls.Girl --* chilly_bird.states.game_over.GameOver #line:Black;line.dashed;text:Black  : groups.girl
chilly_bird.objects.textboxes.TextSprite -r-* chilly_bird.states.flying.Flying #line:Brown;line.dashed;text:Brown  : groups.score
chilly_bird.objects.textboxes.TextSprite --* chilly_bird.states.start_screen.StartScreen #line:Brown;line.dashed;text:Brown  : groups.texts
chilly_bird.objects.buttons.BaseButton --* chilly_bird.states.game_over.GameOver #line:red;line.dashed;text:red  : groups.restart_button
chilly_bird.objects.buttons.BaseButton --* chilly_bird.states.start_screen.StartScreen #line:red;line.dashed;text:red  : groups.buttons

chilly_bird.states.base.BaseState --* chilly_bird.game.Game : current_state
chilly_bird.states.flying.Flying --* chilly_bird.game_factory.MainScene : flying
chilly_bird.states.game_over.GameOver --* chilly_bird.game_factory.MainScene : game_over
chilly_bird.states.start_screen.StartScreen --* chilly_bird.game_factory.MainScene : start_screen

chilly_bird.graph_editor.GraphEditor --> chilly_bird.states.start_screen.StartScreen : reskin_bird()
@enduml
